# class-2-notebooks

./: pyproject.toml
assignments/assignment_01_emergency_dispatcher/: emergency_dispatcher.py
assignments/assignment_02_food_safety_inspector/: food_inspector.py
assignments/assignment_03_transit_delay_explainer/: transit_delay_explainer.py
assignments/assignment_04_haiku_rephraser/: haiku_rephraser.py
assignments/assignment_05_flashcard_maker/: flashcard_maker.py
assignments/assignment_06_reply_macro_composer/: macro_composer.py
assignments/assignment_07_minutes_batcher/: minutes_batcher.py
assignments/assignment_08_micro_coach_streamer/: micro_coach_streamer.py
assignments/assignment_09_puzzle_hint_engine/: puzzle_hint_engine.py
assignments/assignment_10_synthesis_orchestrator/: synthesis_orchestrator.py
